--- a/pom.xml
+++ b/pom.xml
@@ -7,45 +7,33 @@
     <groupId>Yopeso</groupId>
     <artifactId>web-sample</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>net.sourceforge.htmlunit</groupId>
-            <artifactId>htmlunit</artifactId>
-            <version>2.21</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-api</artifactId>
-            <version>3.4.0</version>
-        </dependency>
-    </dependencies>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <serenity.version>1.2.5-rc.5</serenity.version>
-        <webdriver.firefox>firefox</webdriver.firefox>
+        <!--<webdriver.firefox>firefox</webdriver.firefox>-->
         <webdriver.ie>webdrivers\IEDriverServer.exe</webdriver.ie>
-        <webdriver.chrome>webdrivers/chromedriver</webdriver.chrome>
+        <webdriver.chrome>webdrivers\chromedriver.exe</webdriver.chrome>
         <webdriver.driver>provided</webdriver.driver>
         <firefox.driver.version>3.4.0</firefox.driver.version>
     </properties>
 
     <profiles>
-        <profile>
-        <id>mac</id>
-        <activation>
-        <os>
-        <family>mac</family>
-        </os>
-        </activation>
-        <dependencies>
-        <dependency>
-        <groupId>org.seleniumhq.selenium</groupId>
-        <artifactId>selenium-firefox-driver</artifactId>
-        <version>${firefox.driver.version}</version>
-        </dependency>
-        </dependencies>
-        </profile>
+        <!--<profile>-->
+        <!--<id>mac</id>-->
+        <!--<activation>-->
+        <!--<os>-->
+        <!--<family>mac</family>-->
+        <!--</os>-->
+        <!--</activation>-->
+        <!--<dependencies>-->
+        <!--<dependency>-->
+        <!--<groupId>org.seleniumhq.selenium</groupId>-->
+        <!--<artifactId>selenium-firefox-driver</artifactId>-->
+        <!--<version>${firefox.driver.version}</version>-->
+        <!--</dependency>-->
+        <!--</dependencies>-->
+        <!--</profile>-->
         <profile>
             <id>general</id>
             <activation>
